Ateração da home

--- a/EmpoDelas/Views/Home/Index.cshtml
+++ b/EmpoDelas/Views/Home/Index.cshtml
@@ -6,24 +6,20 @@
 <link rel="stylesheet" href="~/css/header.css">
 <link rel="stylesheet" href="~/css/index.css">
 
-<section id="secao1" class="container-fluid">
-    <div class="d-flex text-center">
-        
-    </div>
-    
+<section id="secao1" class="container">
+       
 </section>
-    <div>
-        <h1 class="sobrenos">Nada mais forte do que uma mulher que se empodera!<br> Seja uma "EmpoDelas"</h1>
-    </div>
+    
     <div class="d-flex" id="texto1">
         <p class="texto">
-            Projeto visa ajudar as mulheres da
-            comunidade <br> do bairro de Três Carneiros-Ibura em Recife!
+            
         </p>
     </div>
 <main class="container-fluid">
 
-
+    <div>
+        <h1 class="sobrenos">Nada mais forte do que uma mulher que se empodera!<br> Seja uma "EmpoDelas"</h1>
+    </div>
 
     <section id="secao2" class="container-fluid">
         <div id="boxDepoimento" class="container-fluid">
@@ -32,7 +28,8 @@
             </div>
             <div id="textoDepo">
                 <p>
-                    Criamos o site "EmpoDelas" com o intuito de gerar uma rede de apoio entre as mulheres do bairro (empreendedoras ou não), para que elas possam divulgar seus produtos e serviços, facilitando a movimentação do comércio e  gerando novas oportunidades para outras mulheres que estão sem fonte de renda no momento atual.
+                    Criamos o site "EmpoDelas" com o intuito de gerar uma rede de apoio entre as mulheres do bairro de Ibura,Três Carneiros-PE (empreendedoras ou não), para que elas possam divulgar seus produtos e serviços, facilitando a movimentação do comércio e  gerando novas oportunidades para outras mulheres que estão sem fonte de renda no momento atual.
+                
                 </p>
             </div>
         </div>
