--- a/EmpoDelas/wwwroot/css/header.css
+++ b/EmpoDelas/wwwroot/css/header.css
@@ -70,15 +70,17 @@
   .texto-logo {
     font-family: 'Fontjek';
     font-size: 60px;
-    color: #e71111;
+    color: #ff1616;
   }
 
   .texto-logo:hover {
-    color: #940707;
+    color: #ff1616;
     font-style: none;
     text-decoration: none;
   }
-  
+  .bg-white {
+    background-color: #ffde59!important;
+} 
   /*-------------------CODIGO-----------*/
   
  #menu{
@@ -115,18 +117,23 @@
   }
   
   li > a:hover{
-    color: crimson;
+    color: #ff1616;
     text-decoration: none;
     font-weight: bold;
-    border-top: rgb(255, 70, 70) solid 3px;
+    border-top: #ff1616 solid 3px;
   }
   
-  footer {
+  .footer {
     margin-top: 2%;
-      width:100%;
+    width:100%;
     background-color: #FFDE59;
     text-align: center;
-    padding: 30px 0px;
+    padding: 20px 0px;
+    line-height: 10px;
+    position: absolute;
+    bottom: 0;
+    white-space: nowrap;
+    
   }
   
   .container-header {
@@ -168,5 +175,5 @@
     li > a{
       font-size: 12pt;
     }
-
   }
+  
