--- a/EmpoDelas/wwwroot/css/index.css
+++ b/EmpoDelas/wwwroot/css/index.css
@@ -1,19 +1,20 @@
 /*----------------------SEÇÃO 1   /   HOME - SOBRE NÓS--------------------*/
 
 #secao1{
-  margin-top: 10px;
-  padding: 40px 0px;
-  background-image: url('./img/LGempodelas.png');
+  margin-top: auto;
+  margin-bottom: 10px;
+  padding: 10px 0px;
+  background-image: url('./img/LogoBranca.png');
   background-size: 100%;
   background-repeat: no-repeat;
-  background-attachment: cover;
   text-align: center;
+  border: blue solid 1px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400px;
-  
+  height: 100px;
+     
 }
 
 .texto{
@@ -31,10 +32,11 @@
 }
 
 .sobrenos{
-  font-family: 'Heavitas';
+  font-family: 'Oswald-SemiBold';
   font-size: 10px;
   text-align: center;
-  color: #ff1616;
+  color: black;
+  margin-top: 0px;
   
 }
 
@@ -115,6 +117,7 @@
 }
 
 #textoDepo{
+  
   font-size: 15pt;
   padding: 10px;
   height:auto;
@@ -143,19 +146,19 @@ form input{
   border-radius: 5px;
   border: 1px gray solid;
   font-size: 8pt;
-  background-color: #ffffe6;
+  background-color: #ffde59;
 }
 
 form textarea{
   padding: 10px;
   border-radius: 5px;
-  background-color: #ffffe6;
+  background-color: #ffde59;
 }
 
 form input[type=submit]{
   cursor: pointer;
   border: 0px;
-  background-color: #dbdbb1;
+  background-color: #ffde59;
   width: 30%;
 }
 
