--- a/EmpoDelas/Views/Shared/_Layout.cshtml
+++ b/EmpoDelas/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="ProdutoServicos" asp-action="Index">Produtos e Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a id="linkNav" class="nav-link" asp-area="" asp-controller="Home" asp-action="Somos">Quem somos</a>
+                            <a id="linkNav" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Somos">Quem somos</a>
                         </li>
                         <li class="nav-item">
-                            <a id="linkNav" class="nav-link" asp-area="" asp-controller="Home" asp-action="Conosco">Fale Conosco</a>
+                            <a id="linkNav" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Conosco">Fale Conosco</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
