--- a/EmpoDelas/Views/Autonomas/Edit.cshtml
+++ b/EmpoDelas/Views/Autonomas/Edit.cshtml
@@ -12,36 +12,66 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="id_autonoma" />
+            <input type="hidden" asp-for="Id_autonoma" />
             <div class="form-group">
-                <label asp-for="nome_autonoma" class="control-label"></label>
-                <input asp-for="nome_autonoma" class="form-control" />
-                <span asp-validation-for="nome_autonoma" class="text-danger"></span>
+                <label asp-for="Nome_autonoma" class="control-label"></label>
+                <input asp-for="Nome_autonoma" class="form-control" />
+                <span asp-validation-for="Nome_autonoma" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="sobrenome_autonoma" class="control-label"></label>
-                <input asp-for="sobrenome_autonoma" class="form-control" />
-                <span asp-validation-for="sobrenome_autonoma" class="text-danger"></span>
+                <label asp-for="Sobrenome_autonoma" class="control-label"></label>
+                <input asp-for="Sobrenome_autonoma" class="form-control" />
+                <span asp-validation-for="Sobrenome_autonoma" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="email_autonoma" class="control-label"></label>
-                <input asp-for="email_autonoma" class="form-control" />
-                <span asp-validation-for="email_autonoma" class="text-danger"></span>
+                <label asp-for="Email_autonoma" class="control-label"></label>
+                <input asp-for="Email_autonoma" class="form-control" />
+                <span asp-validation-for="Email_autonoma" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="senha_autonoma" class="control-label"></label>
-                <input asp-for="senha_autonoma" class="form-control" />
-                <span asp-validation-for="senha_autonoma" class="text-danger"></span>
+                <label asp-for="DataNasc_autonoma" class="control-label"></label>
+                <input asp-for="DataNasc_autonoma" class="form-control" />
+                <span asp-validation-for="DataNasc_autonoma" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="telefone_autonoma" class="control-label"></label>
-                <input asp-for="telefone_autonoma" class="form-control" />
-                <span asp-validation-for="telefone_autonoma" class="text-danger"></span>
+                <label asp-for="NumTelefone_autonoma" class="control-label"></label>
+                <input asp-for="NumTelefone_autonoma" class="form-control" />
+                <span asp-validation-for="NumTelefone_autonoma" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="nomeNegocio_autonoma" class="control-label"></label>
-                <input asp-for="nomeNegocio_autonoma" class="form-control" />
-                <span asp-validation-for="nomeNegocio_autonoma" class="text-danger"></span>
+                <label asp-for="Endereco_autonoma" class="control-label"></label>
+                <input asp-for="Endereco_autonoma" class="form-control" />
+                <span asp-validation-for="Endereco_autonoma" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cep_autonoma" class="control-label"></label>
+                <input asp-for="Cep_autonoma" class="form-control" />
+                <span asp-validation-for="Cep_autonoma" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NomeNegocio_autonoma" class="control-label"></label>
+                <input asp-for="NomeNegocio_autonoma" class="form-control" />
+                <span asp-validation-for="NomeNegocio_autonoma" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ContatoNegocio_autonoma" class="control-label"></label>
+                <input asp-for="ContatoNegocio_autonoma" class="form-control" />
+                <span asp-validation-for="ContatoNegocio_autonoma" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CategoriaNegocio_autonoma" class="control-label"></label>
+                <input asp-for="CategoriaNegocio_autonoma" class="form-control" />
+                <span asp-validation-for="CategoriaNegocio_autonoma" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DescricaoNegocio_autonoma" class="control-label"></label>
+                <input asp-for="DescricaoNegocio_autonoma" class="form-control" />
+                <span asp-validation-for="DescricaoNegocio_autonoma" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ComprovanteResid_autonoma" class="control-label"></label>
+                <input asp-for="ComprovanteResid_autonoma" class="form-control" />
+                <span asp-validation-for="ComprovanteResid_autonoma" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
