--- a/EmpoDelas/Views/ProdutoServicos/Delete.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Delete.cshtml
@@ -12,40 +12,40 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.codigo_produtoServico)
+            @Html.DisplayNameFor(model => model.Codigo_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.codigo_produtoServico)
+            @Html.DisplayFor(model => model.Codigo_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.tipo_produtoServico)
+            @Html.DisplayNameFor(model => model.Tipo_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.tipo_produtoServico)
+            @Html.DisplayFor(model => model.Tipo_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nome_produtoServico)
+            @Html.DisplayNameFor(model => model.Nome_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nome_produtoServico)
+            @Html.DisplayFor(model => model.Nome_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.descricao_produtoServico)
+            @Html.DisplayNameFor(model => model.Descricao_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.descricao_produtoServico)
+            @Html.DisplayFor(model => model.Descricao_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.preco_produtoServico)
+            @Html.DisplayNameFor(model => model.Preco_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.preco_produtoServico)
+            @Html.DisplayFor(model => model.Preco_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nomeNegocio_autonoma)
+            @Html.DisplayNameFor(model => model.NomeNegocio_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nomeNegocio_autonoma)
+            @Html.DisplayFor(model => model.NomeNegocio_autonoma)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FK_id_autonoma)
@@ -56,7 +56,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="id_produtoServico" />
+        <input type="hidden" asp-for="Id_produtoServico" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
