--- a/EmpoDelas/Views/Afiliacaos/Create.cshtml
+++ b/EmpoDelas/Views/Afiliacaos/Create.cshtml
@@ -13,9 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="codigo_produtoServico" class="control-label"></label>
-                <input asp-for="codigo_produtoServico" class="form-control" />
-                <span asp-validation-for="codigo_produtoServico" class="text-danger"></span>
+                <label asp-for="Codigo_produtoServico" class="control-label"></label>
+                <input asp-for="Codigo_produtoServico" class="form-control" />
+                <span asp-validation-for="Codigo_produtoServico" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Descricao_afiliacao" class="control-label"></label>
+                <input asp-for="Descricao_afiliacao" class="form-control" />
+                <span asp-validation-for="Descricao_afiliacao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FK_id_afiliada" class="control-label"></label>
