--- a/EmpoDelas/Views/Afiliacaos/Delete.cshtml
+++ b/EmpoDelas/Views/Afiliacaos/Delete.cshtml
@@ -12,10 +12,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.codigo_produtoServico)
+            @Html.DisplayNameFor(model => model.Codigo_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.codigo_produtoServico)
+            @Html.DisplayFor(model => model.Codigo_produtoServico)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Descricao_afiliacao)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Descricao_afiliacao)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FK_id_afiliada)
@@ -32,7 +38,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="id_afiliacao" />
+        <input type="hidden" asp-for="Id_afiliacao" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
