--- a/EmpoDelas/Views/Afiliacaos/Details.cshtml
+++ b/EmpoDelas/Views/Afiliacaos/Details.cshtml
@@ -11,10 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.codigo_produtoServico)
+            @Html.DisplayNameFor(model => model.Codigo_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.codigo_produtoServico)
+            @Html.DisplayFor(model => model.Codigo_produtoServico)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Descricao_afiliacao)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Descricao_afiliacao)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FK_id_afiliada)
@@ -31,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id_afiliacao">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id_afiliacao">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
