--- a/EmpoDelas/Views/Afiliacaos/Edit.cshtml
+++ b/EmpoDelas/Views/Afiliacaos/Edit.cshtml
@@ -12,11 +12,16 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="id_afiliacao" />
+            <input type="hidden" asp-for="Id_afiliacao" />
             <div class="form-group">
-                <label asp-for="codigo_produtoServico" class="control-label"></label>
-                <input asp-for="codigo_produtoServico" class="form-control" />
-                <span asp-validation-for="codigo_produtoServico" class="text-danger"></span>
+                <label asp-for="Codigo_produtoServico" class="control-label"></label>
+                <input asp-for="Codigo_produtoServico" class="form-control" />
+                <span asp-validation-for="Codigo_produtoServico" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Descricao_afiliacao" class="control-label"></label>
+                <input asp-for="Descricao_afiliacao" class="form-control" />
+                <span asp-validation-for="Descricao_afiliacao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FK_id_afiliada" class="control-label"></label>
