--- a/EmpoDelas/Views/Afiliadas/Details.cshtml
+++ b/EmpoDelas/Views/Afiliadas/Details.cshtml
@@ -11,38 +11,62 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nome_afiliada)
+            @Html.DisplayNameFor(model => model.Nome_afiliada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nome_afiliada)
+            @Html.DisplayFor(model => model.Nome_afiliada)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.sobrenome_afiliada)
+            @Html.DisplayNameFor(model => model.Sobrenome_afiliada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.sobrenome_afiliada)
+            @Html.DisplayFor(model => model.Sobrenome_afiliada)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.email_afiliada)
+            @Html.DisplayNameFor(model => model.Email_afiliada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.email_afiliada)
+            @Html.DisplayFor(model => model.Email_afiliada)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.senha_afiliada)
+            @Html.DisplayNameFor(model => model.DataNasc_afiliada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.senha_afiliada)
+            @Html.DisplayFor(model => model.DataNasc_afiliada)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.telefone_afiliada)
+            @Html.DisplayNameFor(model => model.NumTelefone_afiliada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.telefone_afiliada)
+            @Html.DisplayFor(model => model.NumTelefone_afiliada)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Endereco_afiliada)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Endereco_afiliada)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Cep_afiliada)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Cep_afiliada)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Descricao_afiliada)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Descricao_afiliada)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ComprovanteResid_afiliada)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ComprovanteResid_afiliada)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id_afiliada">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id_afiliada">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
