--- a/EmpoDelas/Views/Autonomas/Details.cshtml
+++ b/EmpoDelas/Views/Autonomas/Details.cshtml
@@ -11,44 +11,80 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nome_autonoma)
+            @Html.DisplayNameFor(model => model.Nome_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nome_autonoma)
+            @Html.DisplayFor(model => model.Nome_autonoma)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.sobrenome_autonoma)
+            @Html.DisplayNameFor(model => model.Sobrenome_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.sobrenome_autonoma)
+            @Html.DisplayFor(model => model.Sobrenome_autonoma)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.email_autonoma)
+            @Html.DisplayNameFor(model => model.Email_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.email_autonoma)
+            @Html.DisplayFor(model => model.Email_autonoma)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.senha_autonoma)
+            @Html.DisplayNameFor(model => model.DataNasc_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.senha_autonoma)
+            @Html.DisplayFor(model => model.DataNasc_autonoma)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.telefone_autonoma)
+            @Html.DisplayNameFor(model => model.NumTelefone_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.telefone_autonoma)
+            @Html.DisplayFor(model => model.NumTelefone_autonoma)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nomeNegocio_autonoma)
+            @Html.DisplayNameFor(model => model.Endereco_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nomeNegocio_autonoma)
+            @Html.DisplayFor(model => model.Endereco_autonoma)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Cep_autonoma)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Cep_autonoma)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NomeNegocio_autonoma)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NomeNegocio_autonoma)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ContatoNegocio_autonoma)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ContatoNegocio_autonoma)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CategoriaNegocio_autonoma)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CategoriaNegocio_autonoma)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DescricaoNegocio_autonoma)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DescricaoNegocio_autonoma)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ComprovanteResid_autonoma)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ComprovanteResid_autonoma)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id_autonoma">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id_autonoma">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
