--- a/EmpoDelas/Views/Autonomas/Index.cshtml
+++ b/EmpoDelas/Views/Autonomas/Index.cshtml
@@ -13,22 +13,40 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.nome_autonoma)
+                @Html.DisplayNameFor(model => model.Nome_autonoma)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.sobrenome_autonoma)
+                @Html.DisplayNameFor(model => model.Sobrenome_autonoma)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.email_autonoma)
+                @Html.DisplayNameFor(model => model.Email_autonoma)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.senha_autonoma)
+                @Html.DisplayNameFor(model => model.DataNasc_autonoma)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.telefone_autonoma)
+                @Html.DisplayNameFor(model => model.NumTelefone_autonoma)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.nomeNegocio_autonoma)
+                @Html.DisplayNameFor(model => model.Endereco_autonoma)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cep_autonoma)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NomeNegocio_autonoma)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ContatoNegocio_autonoma)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CategoriaNegocio_autonoma)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DescricaoNegocio_autonoma)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ComprovanteResid_autonoma)
             </th>
             <th></th>
         </tr>
@@ -37,27 +55,45 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.nome_autonoma)
+                @Html.DisplayFor(modelItem => item.Nome_autonoma)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.sobrenome_autonoma)
+                @Html.DisplayFor(modelItem => item.Sobrenome_autonoma)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.email_autonoma)
+                @Html.DisplayFor(modelItem => item.Email_autonoma)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.senha_autonoma)
+                @Html.DisplayFor(modelItem => item.DataNasc_autonoma)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.telefone_autonoma)
+                @Html.DisplayFor(modelItem => item.NumTelefone_autonoma)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.nomeNegocio_autonoma)
+                @Html.DisplayFor(modelItem => item.Endereco_autonoma)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id_autonoma">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id_autonoma">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id_autonoma">Delete</a>
+                @Html.DisplayFor(modelItem => item.Cep_autonoma)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NomeNegocio_autonoma)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContatoNegocio_autonoma)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CategoriaNegocio_autonoma)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DescricaoNegocio_autonoma)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ComprovanteResid_autonoma)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id_autonoma">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id_autonoma">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id_autonoma">Delete</a>
             </td>
         </tr>
 }
