--- a/EmpoDelas/Views/Home/Administrador.cshtml
+++ b/EmpoDelas/Views/Home/Administrador.cshtml
@@ -26,7 +26,7 @@
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Afiliadas" asp-action="Index">Afiliadas Cadastradas</a></li>
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Autonomas" asp-action="Index">Autonômas Cadastradas</a></li>
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Afiliacaos" asp-action="Index">Afiliações</a></li>
-                <li><a class="nav-link text-dark" asp-area="" asp-controller="ProdutoServicos" asp-action="Index">Produtos e Serviços cadastrados</a></li>
+                <li><a class="nav-link text-dark" asp-area="" asp-controller="ProdutoServicos" asp-action="IndexAdmin">Produtos e Serviços cadastrados</a></li>
             </ul>
         </div>
     </div>
