--- a/EmpoDelas/Views/ProdutoServicos/Details.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Details.cshtml
@@ -11,40 +11,40 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.codigo_produtoServico)
+            @Html.DisplayNameFor(model => model.Codigo_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.codigo_produtoServico)
+            @Html.DisplayFor(model => model.Codigo_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.tipo_produtoServico)
+            @Html.DisplayNameFor(model => model.Tipo_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.tipo_produtoServico)
+            @Html.DisplayFor(model => model.Tipo_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nome_produtoServico)
+            @Html.DisplayNameFor(model => model.Nome_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nome_produtoServico)
+            @Html.DisplayFor(model => model.Nome_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.descricao_produtoServico)
+            @Html.DisplayNameFor(model => model.Descricao_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.descricao_produtoServico)
+            @Html.DisplayFor(model => model.Descricao_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.preco_produtoServico)
+            @Html.DisplayNameFor(model => model.Preco_produtoServico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.preco_produtoServico)
+            @Html.DisplayFor(model => model.Preco_produtoServico)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nomeNegocio_autonoma)
+            @Html.DisplayNameFor(model => model.NomeNegocio_autonoma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nomeNegocio_autonoma)
+            @Html.DisplayFor(model => model.NomeNegocio_autonoma)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FK_id_autonoma)
@@ -55,6 +55,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id_produtoServico">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id_produtoServico">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
