--- a/EmpoDelas/Views/ProdutoServicos/IndexAdmin.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/IndexAdmin.cshtml
@@ -25,6 +25,9 @@
                 @Html.DisplayNameFor(model => model.Descricao_produtoServico)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Imagem_produtoServico)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Preco_produtoServico)
             </th>
             <th>
@@ -50,6 +53,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Descricao_produtoServico)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Imagem_produtoServico)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Preco_produtoServico)
