--- a/EmpoDelas/Views/ProdutoServicos/Create.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Create.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="Descricao_produtoServico" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Imagem_produtoServico" class="control-label"></label>
+                <input asp-for="Imagem_produtoServico" class="form-control" />
+                <span asp-validation-for="Imagem_produtoServico" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Preco_produtoServico" class="control-label"></label>
                 <input asp-for="Preco_produtoServico" class="form-control" />
                 <span asp-validation-for="Preco_produtoServico" class="text-danger"></span>
