--- a/EmpoDelas/Views/ProdutoServicos/Details.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Details.cshtml
@@ -35,6 +35,12 @@
             @Html.DisplayFor(model => model.Descricao_produtoServico)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Imagem_produtoServico)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Imagem_produtoServico)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Preco_produtoServico)
         </dt>
         <dd class = "col-sm-10">
