ajuste no botao e privacy

--- a/EmpoDelas/Views/Autonomas/Create.cshtml
+++ b/EmpoDelas/Views/Autonomas/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crie sua conta</h1>
 
 <h4>Autonoma</h4>
 <hr />
@@ -80,7 +80,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
