--- a/EmpoDelas/Views/Home/Index.cshtml
+++ b/EmpoDelas/Views/Home/Index.cshtml
@@ -39,8 +39,8 @@
         <div id="MainCadastrar">
             <div id="fraseMain" class="container-fluid">
                 <h3 class="textoConvite">GOSTARIA DE PARTICIPAR DESSE PROJETO? FAÇA O PRÉ-CADASTRO</h3>
-                <button type="button" class="btn btn-danger"><a  asp-area="" asp-controller="Autonomas" asp-action="Create">Autônoma</a></button>
-                <button type="button" class="btn btn-danger"><a asp-area="" asp-controller="Afiliadas" asp-action="Create">Afiliada</a></button>
+                <button type="button" id="bt1" class="btn btn-danger"><a  asp-area="" asp-controller="Autonomas" asp-action="Create">Autônoma</a></button>
+                <button type="button" id="bt1" class="btn btn-danger"><a asp-area="" asp-controller="Afiliadas" asp-action="Create">Afiliada</a></button>
             </div>
             
         </div>
