--- a/EmpoDelas/Views/Home/Privacy.cshtml
+++ b/EmpoDelas/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Site desenvolvido para o Projeto social Empodelas, focando na atividade do Curso de Programação Full Stack RecodePRO 2021/2022.<br />
+    Somos o Squad 5, composto por Ryan Reis, Verônica Quele, Mariana Duarte, Jéssica Santos e Diego Mendes.    
+</p>
