--- a/EmpoDelas/Views/ProdutoServicos/IndexAdmin.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/IndexAdmin.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Página inicial Administrador</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar um novo</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.FK_id_autonoma)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id_produtoServico">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id_produtoServico">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id_produtoServico">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id_produtoServico">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id_produtoServico">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id_produtoServico">Deletar</a>
             </td>
         </tr>
 }
