--- a/EmpoDelas/wwwroot/css/index.css
+++ b/EmpoDelas/wwwroot/css/index.css
@@ -146,6 +146,27 @@
   font-size: 20pt;
 }
 
+#bt1{
+  padding: 15px;
+  color: #f1f1f1;
+  margin-right: 20px;
+  width: 160px;
+
+  margin-top: 30px;
+}
+
+#bt1 a{
+  font-family: 'Oswald-SemiBold';
+  font-size: 20pt;
+  color: #f1f1f1;
+  text-decoration: none;
+}
+
+#bt1:hover{
+  background-color: #b31010;
+  box-shadow: 0px 5px 20px rgb(255, 129, 129);
+}
+
 /*-----------------FIM SEÇÃO 2  /  DEPOIMENTO - HOME-----------------*/
 /*------------------- formulario contato  - CONTATO ---------------------*/
 
