troca de fonte e edicao da imagem produto

--- a/EmpoDelas/Views/Home/Somos.cshtml
+++ b/EmpoDelas/Views/Home/Somos.cshtml
@@ -46,44 +46,43 @@
         </div>
     </div>
 </div>
-<h1 class="sobrenos_somos"> Integrantes </h1>
-<div class="card-group">
-    <div class="card">
-        <img src="~/css/img/diego.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Diego</h5>
-            <p class="card-text">Aluno Recode Pro <br> Recife/PE <br> 30 anos </p>
+<div class="boxNos">
+    <h1 class="sobrenos_somos"> Integrantes </h1>
+    <div class="card-group">
+        <div class="card">
+            <img src="~/css/img/diego.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Diego</h5>
+                <p class="card-text">Aluno Recode Pro <br> Recife/PE <br> 30 anos </p>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="~/css/img/Jessica_recode.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Jéssica</h5>
-            <p class="card-text">Aluna Recode Pro <br> São Paulo/SP <br> 30 anos  </p>
-
+        <div class="card">
+            <img src="~/css/img/Jessica_recode.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Jéssica</h5>
+                <p class="card-text">Aluna Recode Pro <br> São Paulo/SP <br> 30 anos  </p>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="~/css/img/Mariana.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Mariana</h5>
-            <p class="card-text">Aluna Recode Pro <br> São Paulo/SP <br> 25 anos</p>
-
+        <div class="card">
+            <img src="~/css/img/Mariana.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Mariana</h5>
+                <p class="card-text">Aluna Recode Pro <br> São Paulo/SP <br> 25 anos</p>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="~/css/img/Ryan.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Ryan</h5>
-            <p class="card-text">Aluno Recode Pro <br> Rio de janeiro/RJ <br> 19 anos </p>
+        <div class="card">
+            <img src="~/css/img/Ryan.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Ryan</h5>
+                <p class="card-text">Aluno Recode Pro <br> Rio de janeiro/RJ <br> 19 anos </p>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="~/css/img/Veronica.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Veronica</h5>
-            <p class="card-text">Aluna Recode Pro <br> Salvador/BA <br> 28 anos  </p>
-
+        <div class="card">
+            <img src="~/css/img/Veronica.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Veronica</h5>
+                <p class="card-text">Aluna Recode Pro <br> Salvador/BA <br> 28 anos  </p>
+            </div>
         </div>
     </div>
 </div>
