--- a/EmpoDelas/wwwroot/css/somos.css
+++ b/EmpoDelas/wwwroot/css/somos.css
@@ -25,6 +25,11 @@
     width: 100%;
 }
 
+.boxNos{
+    margin-bottom: 100px;
+    height: auto;
+}
+
 
 /*-------------------- MEDIAS QUERY --------------------*/
 
