--- a/EmpoDelas/Views/ProdutoServicos/Create.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Criar</h1>
+<h1>Adicionar um novo produto/serviço</h1>
 
 <h4>Produto ou Servico</h4>
 <hr />
@@ -37,7 +37,7 @@
                 <span asp-validation-for="Descricao_produtoServico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Preçõ:</label>
+                <label class="control-label">Preço:</label>
                 <input asp-for="Preco_produtoServico" class="form-control" />
                 <span asp-validation-for="Preco_produtoServico" class="text-danger"></span>
             </div>
@@ -48,14 +48,14 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volte para lista de produtos/serviços</a>
 </div>
 
 @section Scripts {
