--- a/EmpoDelas/Views/ProdutoServicos/Delete.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Delete.cshtml
@@ -4,15 +4,15 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete um produto ou serviço</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você realmente quer deletar um produto ou serviço?</h3>
 <div>
     <h4>ProdutoServico</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Codigo_produtoServico)
+            <label>Código do produto/serviço</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Codigo_produtoServico)
@@ -64,6 +64,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id_produtoServico" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volte para lista de produtos</a>
     </form>
 </div>
