--- a/EmpoDelas/Views/ProdutoServicos/Index.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Index.cshtml
@@ -35,7 +35,9 @@
                 {
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
-                            <img src="@item.Imagem_produtoServico" />
+                            <div class="img1">
+                            <img id="imgCard" src="@item.Imagem_produtoServico" />
+                            </div>
                             <span class="span_item">@item.Tipo_produtoServico</span>
                             <h2 class="card-title">@item.Nome_produtoServico</h2>
                             <h6 class="card-subtitle mb-2 text-muted">@item.NomeNegocio_autonoma</h6>
