--- a/EmpoDelas/wwwroot/css/produto.css
+++ b/EmpoDelas/wwwroot/css/produto.css
@@ -21,8 +21,10 @@
 .tituloProdutos{
     text-align: center;
     font-family: 'Heavitas';
-    font-size: 53px;
+    font-size: 40px;
     color: rgb(26, 24, 24);
+    margin-top: 50px;
+    margin-bottom: 20px;
   }
   
   .card{
@@ -36,9 +38,12 @@
     margin-top: 100px;
     margin-bottom: 100px;
   }
+
   .a_produtos{
-    font-size: 15px;
+    font-size: 13px;
+    margin-right: 3px;
   }
+
   .textoPromocao{
     font-family: 'Heavitas';
     font-size: 60px;
@@ -80,6 +85,31 @@
     align-items: center;
     padding: 60px 60px 0px 60px;
     text-align: center;
+  }
+
+  .card-body img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .img1{
+    width: 100%;
+    height: 300px;
+  }
+
+  
+  .col img{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .card-title{
+    font-size: 20pt;
   }
   
   #img-Card{
