Centralizei login e registro

--- a/EmpoDelas/Views/Shared/_Layout.cshtml
+++ b/EmpoDelas/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - EmpoDelas - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - EmpoDelas 
             <a id="linkNav" class="nav-link" asp-area="" asp-controller="Home" asp-action="Administrador">Admin</a>
         </div>
     </footer>
