--- a/EmpoDelas/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EmpoDelas/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,36 +1,27 @@
 ﻿@page
 @model LoginModel
 
-@{
-    ViewData["Title"] = "Conecte-se";
-}
-<link rel="stylesheet" href="~/css/header.css">
+<h1 id="fontFormTi">Conecte-se</h1>
+<br/>
+<link rel="stylesheet" href="~/css/login.css">
 
 <h1>@ViewData["Title"]</h1>
-<div class="row" id="login">
-    <div class="col-md-4">
+<div class="row" >
+    <div class="col-md-4" id="centralizar">
         <section>
-            <form id="account" method="post" class="fc">
+            <form id="account" method="post" class="fm">
                 <h4>Use sua conta para fazer login.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Input.Email"></label>
+                    <label id="fontForm"asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password">Senha</label>
+                    <label id="fontForm" asp-for="Input.Password">Senha</label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe"/>
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Entrar</button>
