--- a/EmpoDelas/wwwroot/css/login.css
+++ b/EmpoDelas/wwwroot/css/login.css
@@ -1,34 +1,20 @@
-.titulo{
-    text-align: center;
+
+#centralizar {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+#fontForm {
+   
+    font-size: 20px;
+}
+
+#fontFormTi {
     font-family: 'Heavitas';
-    font-size: 35pt;
-    margin-top: 30px;
-  }
-  p{
-    text-align: center;
-    margin-top: 35px;
-  }
-  
-  form input{
-    margin-top: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px gray solid;
-    font-size: 8pt;
-    background-color: #ffffe6;
-  }
-   form label{
-     margin-top: 30px;
-   }
-  
-  
-  form input[type=submit]{
-    cursor: pointer;
-    border: 0px;
-    background-color: #dbdbb1;
-    width: 30%;
-  }
-  
-  form input[type=submit]:hover{
-    background-color: #FFDE59;
-  }
+    font-size: 45px;
+    text-align:center;
+}
